--- a/arch/arm/boot/dts/bcm2710.dtsi.org
+++ b/arch/arm/boot/dts/bcm2710.dtsi.org
@@ -13,7 +13,10 @@
 	};
 
 	__overrides__ {
-		arm_freq = <&cpu0>, "clock-frequency:0";
+		arm_freq = <&cpu0>, "clock-frequency:0",
+		       <&cpu1>, "clock-frequency:0",
+		       <&cpu2>, "clock-frequency:0",
+		       <&cpu3>, "clock-frequency:0";
 	};
 };
 
